fix: add version field to goreleaser.yaml and remove brews folder field

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,6 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+version: 2
 project_name: splash
 universal_binaries:
   - name_template: splash
@@ -32,7 +33,6 @@ brews:
   - name: splash-cli
     homepage: https://splash-cli.app
     license: MIT
-    folder: Formula
     description: Splash is a command line interface for Unsplash.
     repository:
       owner: rawnly
